test: github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,9 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+  Build-Github-Production:
+    runs-on: ubuntu-latest
+    steps:
+      - run: npm run build
+      - run: ls
